--- a/live_mall_admin/src/main/resources/application-test.yml
+++ b/live_mall_admin/src/main/resources/application-test.yml
@@ -3,7 +3,7 @@ spring:
         type: com.alibaba.druid.pool.DruidDataSource
         druid:
             driver-class-name: com.mysql.cj.jdbc.Driver
-            url: jdbc:mysql://121.36.43.174:3306/five_way?useUnicode=true&characterEncoding=utf-8&useSSL=false
+            url: jdbc:mysql://121.36.43.174:3306/five_way_test?useUnicode=true&characterEncoding=utf-8&useSSL=false
             username: five_way
             password: five_way@123
             initial-size: 10
