--- a/live_mall_admin/src/main/resources/application-test.yml
+++ b/live_mall_admin/src/main/resources/application-test.yml
@@ -33,9 +33,9 @@ spring:
     redis:
        open: true  # 是否开启redis缓存  true开启   false关闭
        database: 0
-       host: 192.168.0.129
+       host: 127.0.0.1
        port: 6379
-       password: five@123 # 密码（默认为空）
+       password:  # 密码（默认为空）
        timeout: 6000ms  # 连接超时时长（毫秒）
        jedis:
          pool:
